--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
     <p>
         We proudly serve the greater Windhoek area, including:<br>
         • Dorado Park <br>
+        • Dorado Valley <br>
         • Hochland Park <br>
         • Windhoek West <br>
         • And more surrounding neighborhoods!
